# Monkey-Type-Oxide

./: Cargo.toml  README.md  test.drawio
src/: app.rs  app_options.rs  game.rs  main.rs  options.rs  text_gen.rs  type_test.rs  ui.rs
src/ui/: chart.rs  common_ui.rs  layout_ui.rs  mod.rs  tabs.rs  typing_ui.rs  ui.rs
util/: english_10k.json  german.json  german_10k.json  german_1k.json
