[package]
name = "MonkeyTypeOxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"

random_word = { version = "0.4.3", features = ["de", "en"] }
rand = "0.8.5"

textwrap = "0.16"
terminal_size = "0.4"

chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"

strum  = "0.26.3"